--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Meta Tags -->
+    <meta charset="utf-8">
+    <!-- meta name="description" content="DESC" -->
+    <!-- meta name="author" content="COMPANY" -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="og:type" content="Website Applicaiton" />
+    <!-- meta property="og:title" content="TITLE" / -->
+    <!-- meta property="og:description" content="DESC" / -->
+    <!-- meta property="og:url" content="URL" / -->
 
-<head>
-    <title>Welcome to CheckMates</title>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/default.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" href="../images/logo_Chck_m.png">
+
+    <!-- Scripts -->
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../scripts/login.js"></script>
-    <script src="../scripts/config.js"></script>
-    <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
-</head>
-<body onload="validate()">
-    <button onclick="logout()">Logout</button>
-</body>
+
+    <title>CheckMates</title>
+  </head>
+  <body onload="validate()">
+    <div class="container page">
+        <div class="center-items-container">
+            <div class="center-items">
+                <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+            </div>
+        </div>
+    </div>
+  </body>
 </html>
