--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,80 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <!-- meta name="description" content="DESC" -->
     <!-- meta name="author" content="COMPANY" -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
     <meta property="og:type" content="Website Applicaiton" />
-    <!-- meta property="og:title" content="Carmina Jean" / -->
+    <!-- meta property="og:title" content="TITLE" / -->
     <!-- meta property="og:description" content="DESC" / -->
     <!-- meta property="og:url" content="URL" / -->
+
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/animate.css">
     <link rel="stylesheet" type="text/css" href="./css/default.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
 
-    <!--favicon-->
+    <!-- Favicon -->
     <link rel="icon" href="../images/logo_Chck_m.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
-    <!-- link rel="icon" href="IMG" -->
-
-    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-
+    <!-- Scripts -->
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
 
     <title>CheckMates</title>
-</head>
-<body onload="initialize()">
-    <div id="message">
-        <div class="container page">
-            <div class="home-items-container">
-                <div class="home-items">
-                    <img class="home-items home-logo animated fadeIn faster" src="../images/logoCheckMates.png" alt="CheckMates Logo">
-                    <p class="home-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
+  </head>
+  <body onload="initialize()">
+      <div id="message">
+          <div class="container page">
+              <div class="center-items-container">
+                  <div class="center-items">
+                      <img class="center-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+                      <p class="center-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
 
-                    <button type="button" onclick="login()">
-                        <div class="login-btn animated fadeInUp">
-                            <img class="login-btn-img" src="../images/logoGoogle.png" alt="Google Logo">
-                            Sign in with Google
-                        </div>
-                    </button>
+                      <button type="button" onclick="login()">
+                          <div class="blue-btn animated fadeInUp">
+                              <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+                              Sign in with Google
+                          </div>
+                      </button>
 
-                    <!-- <button type="button" onclick="login()">Login with Google</button>
-                    <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
-                </div>
-            </div>
-        </div>
-    </div>
+                      <!-- <button type="button" onclick="login()">Login with Google</button>
+                      <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+                  </div>
+              </div>
+          </div>
+      </div>
 
-    <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
-
-    <!-- <script>
-        document.addEventListener( 'DOMContentLoaded', function ()
-        {
-            try
-            {
-                let app = firebase.app();
-                let features = [ 'auth', 'database', 'messaging', 'storage' ].filter( feature => typeof app[ feature ] === 'function' );
-                document.getElementById( 'load' ).innerHTML = `Firebase SDK loaded with ${ features.join( ', ' ) }`;
-            } catch ( e )
-            {
-                console.error( e );
-                document.getElementById( 'load' ).innerHTML = 'Error loading the Firebase SDK, check the console.';
-            }
-        } );
-    </script> -->
-    <script src="../scripts/login.js"></script>
-    <script src="../scripts/config.js"></script>
-    <script src="../scripts/Mate.js"></script>
-    <script src="../scripts/Space.js"></script>
-    <script src="../scripts/Task.js"></script>
-</body>
+      <!-- <script>
+          document.addEventListener( 'DOMContentLoaded', function ()
+          {
+              try
+              {
+                  let app = firebase.app();
+                  let features = [ 'auth', 'database', 'messaging', 'storage' ].filter( feature => typeof app[ feature ] === 'function' );
+                  document.getElementById( 'load' ).innerHTML = `Firebase SDK loaded with ${ features.join( ', ' ) }`;
+              } catch ( e )
+              {
+                  console.error( e );
+                  document.getElementById( 'load' ).innerHTML = 'Error loading the Firebase SDK, check the console.';
+              }
+          } );
+      </script> -->
+      <script src="../scripts/login.js"></script>
+      <script src="../scripts/config.js"></script>
+      <script src="../scripts/Mate.js"></script>
+      <script src="../scripts/Space.js"></script>
+      <script src="../scripts/Task.js"></script>
+  </body>
 </html>
