--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -1,37 +1,62 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Create or Join a Space</title>
-		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="../scripts/config.js"></script>
-		<script src="../scripts/login.js"></script>
-		<script src="../scripts/Space.js"></script>
+		<!-- Meta Tags -->
+    <meta charset="utf-8">
+    <!-- meta name="description" content="DESC" -->
+    <!-- meta name="author" content="COMPANY" -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="og:type" content="Website Applicaiton" />
+    <!-- meta property="og:title" content="TITLE" / -->
+    <!-- meta property="og:description" content="DESC" / -->
+    <!-- meta property="og:url" content="URL" / -->
+
+    <!-- Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="../css/joinOrCreatePage.css">
-		
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/default.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" href="../images/logo_Chck_m.png">
+
+    <!-- Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <title>Create/Join a Space</title>
 	</head>
 	<body onload="validate()">
-		<div class="mainDialog">
-			<h1>Welcome to CheckMates!</h1>
-			<h3>How would you like to proceed?</h3>
-			
-			<div>
-				<button type="button" onclick="openForm()">Join an existing space</button>
-				<button type="button" onclick="testSpace()">Create a new space</button>
-			</div>
-		</div>
-		<div class="form-popup" id="frmSpaceIDPopup">
-		  <form action="/action_page.php" class="form-container">
-			<h2>Join Your Mates Space</h2>
+		<div class="container page">
+				<div class="center-items-container">
+						<div class="center-items">
+								<h3>Welcome to CheckMates!</h3>
+								<p>How would you like to proceed?</p>
+								<br><br>
+								<div class="center-items">
+									<button type="button" class="blue-btn" onclick="openForm()">Join an existing space</button>
+									<p> </p>
+									<button type="button" class="blue-btn" onclick="testSpace()">Create a new space</button>
+								</div>
+								<div class="form-popup" id="frmSpaceIDPopup">
+									<form action="/action_page.php" class="form-container">
+										<h2>Join Your Mates Space</h2>
 
-			<label for="SpaceID"><b>Enter Space ID</b></label>
-			<input type="text" placeholder="Space ID" name="SpaceID" required>
-			<button type="submit" class="btn">Join Space</button>
-			<button type="submit" class="btn cancel" onclick="closeForm()">Cancel</button>
-		  </form>
+										<label for="SpaceID"><b>Enter Space ID</b></label>
+										<input type="text" placeholder="Space ID" name="SpaceID" required>
+										<button type="submit" class="btn">Join Space</button>
+										<button type="submit" class="btn cancel" onclick="closeForm()">Cancel</button>
+									</form>
+								</div>
+
+								<!-- <button type="button" onclick="login()">Login with Google</button>
+								<button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+						</div>
+				</div>
 		</div>
-		
+
 		<script>
 			function openForm() {
 			  document.getElementById("frmSpaceIDPopup").style.display = "block";
@@ -41,5 +66,9 @@
 			  document.getElementById("frmSpaceIDPopup").style.display = "none";
 			}
 		</script>
+
+		<script src="../scripts/config.js"></script>
+		<script src="../scripts/login.js"></script>
+		<script src="../scripts/Space.js"></script>
 	</body>
-</html>	
+</html>
