created form to create new space, adds space to firebase adds current… (#33)
* created form to create new space, adds space to firebase adds current user to that space and saves space id to session storage

* edited createFirestoreSpace function

* edited createNewSpace function

--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -38,7 +38,7 @@
 								<div class="center-items">
 									<button type="button" class="blue-btn" onclick="openForm()">Join an existing space</button>
 									<p> </p>
-									<button type="button" class="blue-btn" onclick="testSpace()">Create a new space</button>
+									<button type="button" class="blue-btn" onclick="redirectCreateNewSpace()">Create a new space</button>
 								</div>
 								<div class="form-popup" id="frmSpaceIDPopup">
 									<form action="/action_page.php" class="form-container">
@@ -54,7 +54,7 @@
 								<!-- <button type="button" onclick="login()">Login with Google</button>
 								<button type="button" onclick="redirLogin()">Redirect to Google</button> -->
 						</div>
-				</div>
+        </div>
 		</div>
 
 		<script>
