--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -65,10 +65,10 @@
               }
           } );
       </script> -->
-      <script src="../scripts/login.js"></script>
-      <script src="../scripts/config.js"></script>
-      <script src="../scripts/Mate.js"></script>
-      <script src="../scripts/Space.js"></script>
-      <script src="../scripts/Task.js"></script>
+      <script src="./scripts/login.js"></script>
+      <script src="./scripts/config.js"></script>
+      <script src="./scripts/Mate.js"></script>
+      <script src="./scripts/Space.js"></script>
+      <script src="./scripts/Task.js"></script>
   </body>
 </html>
