--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -31,8 +31,8 @@
 </head>
 <body onload="initialize()">
     <div class="container page">
-        <div class="home-items-container">
-            <div class="home-items">
+        <div class="center-items-container">
+            <div class="center-items">
               <h3>Create Space</h3>
 
               <form>
