--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -28,10 +28,12 @@
 
     <title>Welcome to CheckMates</title>
   </head>
-  <body onload="initializeWelcome()">
+  <body onload="initializeWelcome(); displayUserInfo()">
       <div class="container page">
           <div class="center-items-container">
               <div class="center-items">
+                <h3 class="animated fadeIn slower" id="FullName"> </h3>
+                <h3 class="animated fadeIn slower" id="Email"> </h3>
                   <h3>Enter Nick Name</h3>
 
                       <form>
