connected spacekey.html and createnewspace.html, made spaceKey.html work for created space

--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -46,7 +46,7 @@
                 <input type="text" id="spaceDescription">
                 <br><br>
               </form>
-              <button class="login-btn" type="button" onclick="createFirestoreSpace()">Create Space</button>
+              <button type="button" class="blue-btn" onclick="createFirestoreSpace()">Create Space</button>
             </div>
         </div>
     </div>
