--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -34,9 +34,11 @@
         <div class="center-items">
             <h3 id="showName"></h3>
             <h4 id="showDescription"></h4>
-            <p>Send this key to your mates so they can join your space:</p>
             <br><br>
+            <p>Send this key to your mates so they can join your space:</p>
             <h3 class="animated fadeIn slower" id="showID"></h3>
+            <br><br>
+            <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Continue</button>
         </div>
     </div>
 
