Created tasks pushed to existing space, works

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -32,8 +32,17 @@
         <div class="center-items-container">
             <div class="center-items">
                 <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+                <br>
+                <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create Task</button>
             </div>
         </div>
     </div>
+
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/config.js"></script>
+    <script src="../scripts/Mate.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/Task.js"></script>
+
   </body>
 </html>
