--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -32,15 +32,17 @@
       <div class="container page">
           <div class="center-items-container">
               <div class="center-items">
-                <h3 class="animated fadeIn slower" id="FullName"> </h3>
-                <h3 class="animated fadeIn slower" id="Email"> </h3>
+                <h3>Your Profile</h3>
+                <p class="animated fadeIn slower" id="FullName"> </p>
+                <p class="animated fadeIn slower" id="Email"> </p>
+                <br>
                   <h3>Enter Nick Name</h3>
 
                       <form>
                           <input type="text" id="nameField">
                       </form>
 
-                      <br><br>
+                      <br>
 
                   <button class="blue-btn" type="button" onclick="loginNewUser('../html/joinOrCreateSpace.html')">Submit</button>
               </div>
