--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -2,13 +2,6 @@
 <html>
 	<head>
 		<title>Create or Join a Space</title>
-		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="../scripts/config.js"></script>
-		<script src="../scripts/login.js"></script>
-		<script src="../scripts/Space.js"></script>
-		<script src="../scripts/Mate.js"></script>
 		<!-- Meta Tags -->
     <meta charset="utf-8">
     <!-- meta name="description" content="DESC" -->
@@ -32,8 +25,11 @@
     <!-- Scripts -->
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="../scripts/config.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	  <script src="../scripts/config.js"></script>
+  	<script src="../scripts/login.js"></script>
+  	<script src="../scripts/Space.js"></script>
+  	<script src="../scripts/Mate.js"></script>
 
     <title>Create/Join a Space</title>
 	</head>
@@ -48,6 +44,8 @@
 									<button type="button" class="blue-btn" onclick="openForm()">Join an existing space</button>
 									<p> </p>
 									<button type="button" class="blue-btn" onclick="redirectCreateNewSpace()">Create a new space</button>
+									<p> </p>
+									<button type="button" class="blue-btn" onclick="testSpace()">Test Button</button>
 								</div>
 								<div class="form-popup" id="frmSpaceIDPopup">
 									<form action="/action_page.php" class="form-container">
@@ -59,9 +57,6 @@
 										<button type="submit" class="btn cancel" onclick="closeForm()">Cancel</button>
 									</form>
 								</div>
-
-								<!-- <button type="button" onclick="login()">Login with Google</button>
-								<button type="button" onclick="redirLogin()">Redirect to Google</button> -->
 						</div>
         </div>
 		</div>
