Removed value property from isRecurring input because now we dont need it

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -52,7 +52,7 @@
                   <br><br>
 
                   Recurring Weekly:
-                  <input type="checkbox" name="isRecurring" value"false" id="isRecurringField">
+                  <input type="checkbox" name="isRecurring" id="isRecurringField">
                   <br><br>
                 </form>
                 <button class="blue-btn" type="button" onclick="createFirestoreTask()">Create Task</button>
