Added new controls for handing recurring / one-time tasks to createTask.html (#43)

--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -47,6 +47,7 @@
 									<p> </p>
 									<button type="button" class="blue-btn" onclick="testSpace()">Test Button</button>
 								</div>
+								
 								<div class="form-popup" id="frmSpaceIDPopup">
 									<form action="/action_page.php" class="form-container">
 										<h2>Join Your Mates Space</h2>
@@ -57,6 +58,8 @@
 										<button type="submit" class="btn cancel" onclick="closeForm()">Cancel</button>
 									</form>
 								</div>
+								<!-- <button type="button" onclick="login()">Login with Google</button>
+								<button type="button" onclick="redirLogin()">Redirect to Google</button> -->
 						</div>
         </div>
 		</div>
