changed all html pages onload function from initialize to validate

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -29,7 +29,7 @@
 
     <title>Create a Task</title>
   </head>
-  <body onload="initialize()">
+  <body onload="validate()">
       <div class="container page">
           <div class="center-items-container">
               <div class="center-items">
