--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -29,7 +29,7 @@
 
     <title>CheckMates</title>
 </head>
-<body onload="initialize()">
+<body onload="validate()">
     <div class="container page">
         <div class="center-items-container">
             <div class="center-items">
