Created function to pull all Tasks from Spaces Firebase table and store them in Space Tasks array. Updated tskCompletionStatus to tskIsComplete to match tskIsRecurring, also updated getters and setters to reflect this.

--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -68,5 +68,6 @@
 		<script src="../scripts/login.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
+		<script src="../scripts/Task.js"></script>
 	</body>
 </html>
