Fixed body comment

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -30,8 +30,7 @@
 
     <title>CheckMates</title>
   </head>
-  <!-- <body onload="validate()"> -->
-  <body>
+  <body onload="validate()">
     <div class="container page test">
       <div class="test">
         <h3 id="showName">Space Name</h3>
