--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146101638-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'UA-146101638-1');
-	</script>
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <!-- meta name="description" content="DESC" -->
@@ -47,6 +39,10 @@
                 <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create Task</button>
             </div>
         </div>
+    </div>
+    <div>
+      <table id="TaskList">
+      </table>
     </div>
 
     <script src="../scripts/login.js"></script>
