Removed page class, created top-bar on overview and made it mobile responsive

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -30,7 +30,7 @@
     <title>Create a Task</title>
   </head>
   <body onload="validate()">
-      <div class="container page">
+      <div class="container">
           <div class="center-items-container">
               <div class="center-items">
                 <h3>Create a Task</h3>
