--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -29,8 +29,8 @@
 
     <title>My Space Key</title>
   </head>
-<body onload = "spaceKeyInitialize()">
-    <div class="center-items-container">
+<body>
+    <div class="container center-items-container">
         <div class="center-items">
             <h3 id="showName"></h3>
             <h4 id="showDescription"></h4>
