--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -30,7 +30,7 @@
   </head>
   <body onload="initialize()">
       <div id="message">
-          <div class="container page">
+          <div class="container">
               <div class="center-items-container">
                   <div class="center-items">
                       <img class="center-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
