--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -30,7 +30,7 @@
     <title>CheckMates</title>
 </head>
 <body onload="validate()">
-    <div class="container page">
+    <div class="container">
         <div class="center-items-container">
             <div class="center-items">
               <h3>Create Space</h3>
