--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -26,11 +26,11 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	
+
     <title>Create/Join a Space</title>
 	</head>
 	<body onload="validate()">
-		<div class="container page">
+		<div class="container">
 				<div class="center-items-container">
 						<div class="center-items">
 								<h3>Welcome to CheckMates!</h3>
