--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -32,23 +32,22 @@
   </head>
   <!-- <body onload="validate()"> -->
   <body>
-    <div class="container page test">
-        <div class="top-bar test">
-          <div class="top-bar-logo test">
-            <img class ="bar-logo" src="../images/logoCheckMates.png" alt="Checkmates Logo">
-          </div>
-          <div>
+    <div class="container test">
+      <div class="top-bar test">
+          <img class ="top-bar-logo test" src="../images/logoCheckMates.png" alt="Checkmates Logo">
+          <div class="space-information test">
               <h3 id="showName">Space Name</h3>
               <h4 id="showDescription">Space Description</h4>
           </div>
           <div class="test">
-            <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
-            <br>
             <button class="blue-btn" type="button" onclick="logout()">Logout</button>
           </div>
       </div>
 
-      <div class="center-items-container test">
+      <div class="center-items-container">
+        <div class="test">
+          <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+        </div>
         <br>
         <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
         <div id="Mates List">
