Finished Recurring tasks UI and linked to Firebase db

--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -55,7 +55,7 @@
 										<h3>Join Your Mates Space</h3>
 										<label for="SpaceID"><b>Enter Space ID</b></label>
 										<input id="userSpaceID" type="text" placeholder="Space ID" name="SpaceID" required>
-										<button type="button" class="btn" onclick="testSpace()">Join Space</button>
+										<button type="button" class="btn" onclick="joinExistingSpace()">Join Space</button>
 										<button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
 									</form>
 								</div>
