--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -42,7 +42,7 @@
           <div class="center-items-container">
               <div class="center-items">
                 <h3>Create a Task</h3>
-                <form>
+                <form style="height:450px">
 
 					Task Title:
 					<br>
@@ -54,14 +54,6 @@
 					<input type="text" id="descriptionField">
 					<br><br>
 
-					<!-- Task Type Switch -->
-					<label>Recurring Task:</label>
-					<label class="switch">
-						<input id="isRecurringField" type="checkbox" onClick="testMe()">
-						<span class="slider round"></span>
-					</label>
-					<br>
-
 					<!-- Div For One Time Task -->
 					<div id="oneTimeTask">
 						<label>
@@ -72,6 +64,14 @@
 							<br><br>
 						</label>
 					</div>
+					
+					<!-- Task Type Switch -->
+					<label>Recurring Task:</label>
+					<label class="switch">
+						<input id="isRecurringField" type="checkbox" onClick="toggleRecurring()">
+						<span class="slider round"></span>
+					</label>
+					<br>
 
 					<!-- Div For Recurring Tasks -->
 					<div class="recurringControls" id="recurringTask">
@@ -79,32 +79,43 @@
 							Period:
 							<br>
 							<div class="periodControl">
-								<input type="radio" id="Daily" name="period" value="daily">
-								<label for="louie">Daily</label>
-								<input type="radio" id="Weekly" name="period" value="weekly">
-								<label for="louie">Weekly</label>
-								<input type="radio" id="Monthly" name="period" value="monthly">
-								<label for="louie">Monthly</label>
+								<input type="radio" id="Daily" name="period" value="daily" onclick="setNumDays()">
+								<label for="Daily">Daily</label>
+								<input type="radio" id="Weekly" name="period" value="weekly" onclick="setNumDays()">
+								<label for="Weekly">Weekly</label>
+								<input type="radio" id="Monthly" name="period" value="monthly" onclick="setNumDays()">
+								<label for="Monthly">Monthly</label>
+								<br>
+								<input id="recurringPeriodField" type="number" name="quantity" min="1" max="100">
+								<label>Day(s)</label>
 							</div>
 							<br>
 						</label>
 					</div>
-
         </form>
-        <button class="blue-btn" type="button" onclick="createFirestoreTask()">Create Task</button>
+        <button class="blue-btn" type="button" onclick="createFirestoreTask()" style="position:sticky;">Create Task</button>
       </div>
     </div>
 </div>
 
 	  <script type="text/javascript">
-		function testMe(){
+		function toggleRecurring(){
 			if(document.getElementById("isRecurringField").checked === true){
-				document.getElementById("oneTimeTask").style.display = "none";
 				document.getElementById("recurringTask").style.display = "inline";
 			}
 			else{
-				document.getElementById("oneTimeTask").style.display = "inline";
 				document.getElementById("recurringTask").style.display = "none";
+			}
+		}
+		function setNumDays(){
+			if($('#Daily').is(':checked')){
+				$('#recurringPeriodField').val('1');
+			}
+			else if($('#Weekly').is(':checked')){
+				$('#recurringPeriodField').val('7');
+			}
+			else if($('#Monthly').is(':checked')){
+				$('#recurringPeriodField').val('30');
 			}
 		}
 	</script>
