Formatted web view of space page. Created buttons for viewing separate pages that data dump Tasks and Mates.

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -32,28 +32,28 @@
   </head>
   <!-- <body onload="validate()"> -->
   <body>
-    <div class="container test">
-      <div class="top-bar test">
-          <img class ="top-bar-logo test" src="../images/logoCheckMates.png" alt="Checkmates Logo">
-          <div class="space-information test">
+    <div class="space container ">
+      <div class="top-bar">
+          <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
+          <div class="space-information ">
               <h3 id="showName">Space Name</h3>
               <h4 id="showDescription">Space Description</h4>
           </div>
-          <div class="test">
+          <div class="">
             <button class="blue-btn" type="button" onclick="logout()">Logout</button>
           </div>
       </div>
 
-      <div class="center-items-container">
-        <div class="test">
+      <br>
+
+      <div class="center-items-container space-content ">
+        <div class="">
           <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+          <button class="blue-btn" type="button" target="_blank" href="matelist.html">View Mates</button>
         </div>
-        <br>
-        <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
-        <div id="Mates List">
-          <li>Mate 1</li>
-          <li>Mate 2</li>
-          <li>Mate 2</li>
+        <div class="">
+          <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
+          <button class="blue-btn" type="button" target="_blank" href="tasklist.html">View Tasks</button>
         </div>
       </div>
     </div>
