--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-	  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146101638-1"></script>
-	  <script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		  gtag('config', 'UA-146101638-1');
-	  </script>
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <!-- meta name="description" content="DESC" -->
@@ -44,11 +36,14 @@
             <div class="center-items">
                 <button class="blue-btn" type="button" onclick="logout()">Logout</button>
                 <br>
-                <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create Task</button>
+                <button class="blue-btn" type="button" onclick="redirect('./html/overview.html')">Overview</button>
+                <table id="taskList" onload="displayTasks()">
+                  </table>
             </div>
         </div>
     </div>
-
+        
+    <script src="../scripts/displayScripts.js"></script>
     <script src="../scripts/login.js"></script>
     <script src="../scripts/config.js"></script>
     <script src="../scripts/Mate.js"></script>
