--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -30,8 +30,7 @@
 
     <title>CheckMates</title>
   </head>
-  <!-- <body onload="validate()"> -->
-  <body>
+  <body onload="validate()">
     <div class="space container ">
       <div class="top-bar">
           <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
