Space Page Outline (#66)
* Added Name and Description to overview, rearranged divs

* made some edits to overview page pushing so mina can edit

* Removed page class, created top-bar on overview and made it mobile responsive

* Formatted web view of space page. Created buttons for viewing separate pages that data dump Tasks and Mates.

* uncommented the onload

--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -39,7 +39,7 @@
     <title>CheckMates</title>
 </head>
 <body onload="validate()">
-    <div class="container page">
+    <div class="container">
         <div class="center-items-container">
             <div class="center-items">
               <h3>Create Space</h3>
