--- a/Roomate-app/public/html/profile.html
+++ b/Roomate-app/public/html/profile.html
@@ -36,7 +36,7 @@
     <title>Welcome to CheckMates</title>
   </head>
   <body onload="initializeWelcome(); displayUserInfo()">
-      <div class="container page">
+      <div class="container">
           <div class="center-items-container">
               <div class="center-items">
                 <h3>Your Profile</h3>
