--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/animate.css">
     <link rel="stylesheet" type="text/css" href="../css/default.css">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
@@ -37,15 +37,32 @@
     <title>CheckMates</title>
   </head>
   <body onload="validate()">
-    <div class="container page">
-        <div class="center-items-container">
-            <div class="center-items">
-                <button class="blue-btn" type="button" onclick="logout()">Logout</button>
-                <br>
-                <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create Task</button>
-            </div>
+    <div class="space container ">
+      <div class="top-bar">
+          <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
+          <div class="space-information ">
+              <h3 id="showName">Space Name</h3>
+              <h4 id="showDescription">Space Description</h4>
+          </div>
+          <div class="">
+            <button class="blue-btn" type="button" onclick="logout()">Logout</button>
+          </div>
+      </div>
+
+      <br>
+
+      <div class="center-items-container space-content ">
+        <div class="">
+          <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+          <button class="blue-btn" type="button" target="_blank" href="matelist.html">View Mates</button>
         </div>
+        <div class="">
+          <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
+          <button class="blue-btn" type="button" target="_blank" href="tasklist.html">View Tasks</button>
+        </div>
+      </div>
     </div>
+
 
     <script src="../scripts/login.js"></script>
     <script src="../scripts/config.js"></script>
