Standardized head tag, but spaceKey.html not displaying information.

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146101638-1"></script>
+  	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+  		gtag('config', 'UA-146101638-1');
+  	</script>
+
     <!-- Meta Tags -->
     <meta charset="utf-8">
-    <!-- meta name="description" content="DESC" -->
-    <!-- meta name="author" content="COMPANY" -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Keep your roommates in check with CheckMates.">
+    <meta name="author" content="Mates Co.">
     <meta property="og:type" content="Website Applicaiton" />
-    <!-- meta property="og:title" content="TITLE" / -->
-    <!-- meta property="og:description" content="DESC" / -->
-    <!-- meta property="og:url" content="URL" / -->
+    <meta property="og:title" content="CheckMates" />
+    <meta property="og:description" content="Keep your roommates in check" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/animate.css">
     <link rel="stylesheet" type="text/css" href="./css/default.css">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
@@ -25,50 +34,31 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
+    <script src="./scripts/config.js"></script>
+		<script src="./scripts/login.js"></script>
+		<script src="./scripts/Space.js"></script>
+		<script src="./scripts/Mate.js"></script>
+		<script src="./scripts/Task.js"></script>
 
     <title>CheckMates</title>
   </head>
   <body onload="initialize()">
-      <div id="message">
-          <div class="container">
-              <div class="center-items-container">
-                  <div class="center-items">
-                      <img class="center-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
-                      <p class="center-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
+    <div id="message">
+      <div class="container">
+        <div class="center-items-container">
+          <div class="center-items">
+            <img class="center-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+            <p class="center-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
 
-                      <button type="button" onclick="login()">
-                          <div class="blue-btn animated fadeInUp">
-                              <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
-                              Sign in with Google
-                          </div>
-                      </button>
-
-                      <!-- <button type="button" onclick="login()">Login with Google</button>
-                      <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
-                  </div>
-              </div>
+            <button type="button" onclick="login()">
+                <div class="blue-btn animated fadeInUp">
+                    <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+                    Sign in with Google
+                </div>
+            </button>
           </div>
+        </div>
       </div>
-
-      <!-- <script>
-          document.addEventListener( 'DOMContentLoaded', function ()
-          {
-              try
-              {
-                  let app = firebase.app();
-                  let features = [ 'auth', 'database', 'messaging', 'storage' ].filter( feature => typeof app[ feature ] === 'function' );
-                  document.getElementById( 'load' ).innerHTML = `Firebase SDK loaded with ${ features.join( ', ' ) }`;
-              } catch ( e )
-              {
-                  console.error( e );
-                  document.getElementById( 'load' ).innerHTML = 'Error loading the Firebase SDK, check the console.';
-              }
-          } );
-      </script> -->
-      <script src="./scripts/login.js"></script>
-      <script src="./scripts/config.js"></script>
-      <script src="./scripts/Mate.js"></script>
-      <script src="./scripts/Space.js"></script>
-      <script src="./scripts/Task.js"></script>
+    </div>
   </body>
 </html>
