--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -34,8 +34,10 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="../scripts/config.js"></script>
+		<script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
+		<script src="../scripts/pageInits.js"></script>
+    <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
 		<script src="../scripts/Task.js"></script>
@@ -59,7 +61,7 @@
             <input type="text" id="spaceDescription">
             <br><br>
           </form>
-					
+
           <button type="button" class="blue-btn" onclick="createFirestoreSpace()">Create Space</button>
         </div>
       </div>
