--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -36,6 +36,8 @@
     <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
     <script src="./scripts/config.js"></script>
 		<script src="./scripts/login.js"></script>
+		<script src="./scripts/pageInits.js"></script>
+    <script src="./scripts/displayScripts.js"></script>
 		<script src="./scripts/Space.js"></script>
 		<script src="./scripts/Mate.js"></script>
 		<script src="./scripts/Task.js"></script>
