--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -36,7 +36,7 @@
 
 		<script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
-		<script src="../scripts/pageInits.js"></script>
+		<script src="../scripts/pageInitsAndRedirs.js"></script>
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
