--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -36,7 +36,7 @@
 
     <script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
-		<script src="../scripts/pageInits.js"></script>
+		<script src="../scripts/pageInitsAndRedirs.js"></script>
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
@@ -57,7 +57,7 @@
 
         <br><br>
 
-        <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Continue</button>
+        <button class="blue-btn" type="button" onclick="redirectOverview()">Continue</button>
       </div>
     </div>
   </body>
