--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -33,10 +33,10 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
+
     <script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
-		<script src="../scripts/pageInits.js"></script>
+		<script src="../scripts/pageInitsAndRedirs.js"></script>
     <script src="../scripts/displayScripts.js"></script>
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
