Fixed a couple other bugs
Nickname was not being populated on account creation

Space details not shown when a new space is created

Invite a mate not redirecting to the right page

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -53,7 +53,7 @@
 
       <div class="center-items-container space-content ">
         <div class="">
-          <button class="blue-btn" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+          <button class="blue-btn" type="button" onclick="redirect('../html/spaceKey.html')">Invite a Mate</button>
           <button class="blue-btn" type="button" target="_blank" href="matelist.html">View Mates</button>
         </div>
         <div class="">
