--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -37,7 +37,7 @@
 
     <title>My Space Key</title>
   </head>
-<body>
+<body onload="spaceKeyInitialize() ">
     <div class="container center-items-container">
         <div class="center-items">
             <h3 id="showName"></h3>
